common/force-app/main/default/objects/Message__c/fields/Aircall_Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Aircall_Record_Link__c</fullName>
    <label>Aircall Record Link</label>
    <type>Url</type>
</CustomField>