common/force-app/main/default/objects/Message__c/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <label>Customer Number</label>
    <type>Phone</type>
</CustomField>