common/force-app/main/default/objects/Message__c/fields/EOI__c.field-meta.xml
<CustomField>
    <fullName>EOI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EOI</label>
    <referenceTo>EOI__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <type>Lookup</type>
</CustomField>