common/force-app/main/default/objects/Message__c/fields/Internal_Number__c.field-meta.xml
<CustomField>
    <fullName>Internal_Number__c</fullName>
    <label>Internal Number</label>
    <type>Phone</type>
</CustomField>