common/force-app/main/default/objects/Message__c/fields/Mobile_No_spaces__c.field-meta.xml
<CustomField>
    <fullName>Mobile_No_spaces__c</fullName>
    <formula>SUBSTITUTE(Customer_Number__c , &quot; &quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile No spaces</label>
    <type>Text</type>
</CustomField>