common/force-app/main/default/objects/Message__c/fields/No_Account_Found__c.field-meta.xml
<CustomField>
    <fullName>No_Account_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Account Found</label>
    <type>Checkbox</type>
</CustomField>