common/force-app/main/default/objects/Message__c/fields/Raise__c.field-meta.xml
<CustomField>
    <fullName>Raise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Raise</label>
    <referenceTo>Raise__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <type>Lookup</type>
</CustomField>