common/force-app/main/default/objects/Message__c/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <label>User Email</label>
    <length>200</length>
    <type>Text</type>
</CustomField>