common/force-app/main/default/objects/Message__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Team__c</columns>
    <columns>Account__c</columns>
    <columns>Message_Body__c</columns>
    <columns>Customer_Number__c</columns>
    <columns>Internal_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>