common/force-app/main/default/objects/Message__c/listViews/SMS_Inbound.listView-meta.xml
<ListView>
    <fullName>SMS_Inbound</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Account__c</columns>
    <columns>Message_Body__c</columns>
    <columns>Customer_Number__c</columns>
    <columns>Internal_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>SMS - Inbound</value>
    </filters>
    <label>SMS - Inbound</label>
</ListView>