common/force-app/main/default/objects/Message__c/listViews/Ventures_SMS.listView-meta.xml
<ListView>
    <fullName>Ventures_SMS</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Team__c</columns>
    <columns>Account__c</columns>
    <columns>Message_Body__c</columns>
    <columns>Customer_Number__c</columns>
    <columns>Internal_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Crow</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Quattro</value>
    </filters>
    <label>Ventures SMS</label>
</ListView>